# TSCUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TSCInclude  main.cpp
include/: ffmpegworker.hpp  hs.h  includeQt  mainwindow.hpp  threadMgr.hpp  types  worker.hpp
lang/: tscUI_zh_CN.ts
res/: assets.qrc  res.rc
src/: debugWindow.cpp  debugWindow.ui  ffmpegworker.cpp  mainwindow.cpp  mainwindow.ui  threadMgr.cpp  types.cpp  worker.cpp
widgets/: textbrowser.cpp  textbrowser.hpp  textbrowser.ui
widgets/include/: debugWindow.hpp  tabWig.hpp
widgets/src/: debugWindow.cpp  debugWindow.ui
